--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@metamask/detect-provider": "^1.2.0",
+    "@openzeppelin/contracts": "^4.6.0",
     "ethers": "^5.6.8",
+    "hardhat": "^2.9.6",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,8 +30,10 @@
     "@angular-devkit/build-angular": "~13.3.5",
     "@angular/cli": "~13.3.5",
     "@angular/compiler-cli": "~13.3.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "ethereum-waffle": "^3.0.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
